Fix modal components positioning on mobile devices

--- a/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
+++ b/demos/PersonalizerBusinessDemo/PersonalizerBusinessDemo/wwwroot/css/site.css
@@ -407,9 +407,8 @@ h1 {
 .chart-learn {
     max-height: 20rem;
     min-height: 15rem;
-    max-width: 50vw;
+    max-width: 65vw;
     min-width: 15vw;
-    margin-bottom: 1rem;
     margin-top: 1rem;
 }
 
